fix shadow z-index

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -20,10 +20,15 @@ body{
 	left:0;
 	width:100%;
 	height:100%;
-	/*background-color: rgba(0, 0, 0, 0.6);*/
 }
 .shadow{
 	background-color: rgba(0, 0, 0, 0.6);
+	position: fixed;
+	z-index:-4;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
 }
 .basic_info{
 	height: 100vh;
